--- a/index.html
+++ b/index.html
@@ -40,128 +40,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Devin R. Perales</h1>
-        <div class="contact-info">
-            <p><strong>Location:</strong> San Francisco & Los Angeles, CA</p>
-            <p><strong>Phone:</strong> 818-389-8004</p>
-            <p><strong>Email:</strong> <a href="mailto:devperales@gmail.com">devperales@gmail.com</a></p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/devin-perales-a5199769/" target="_blank">Devin Perales</a></p>
-        </div>
-
-        <div class="section">
-            <h2>Professional Summary</h2>
-            <p>Self-motivated communications advisor with 10 years of experience in fast-paced environments, commended by executives at Fortune 500 companies for architecting winning communication plans that drive marketing growth and position brands at respective industry vanguard.</p>
-            <p>Influential manager with proficiency in training, building dynamic teams, and cultivating an inclusive work culture that promotes collaboration and results.</p>
-            <p>PR expert dedicated to fostering lasting relationships with reporters and influencers, and adept at securing coverage in trade, industry, and consumer outlets along with creator platforms, podcasts, and other emerging media.</p>
-            <p>Accomplished event planner experienced in planning and producing brand activations that drive awareness and ignite buzz for campaigns.</p>
-            <p>Exceptional writer and communicator skilled in translating data and complex concepts into compelling brand narratives and content that resonates with core audiences and the media.</p>
-        </div>
-
-        <div class="section">
-            <h2>Areas of Expertise</h2>
-            <ul>
-                <li>Budget Management</li>
-                <li>Campaign Development & Execution</li>
-                <li>Crisis Management</li>
-                <li>Cross-Team Collaboration</li>
-                <li>Event Management</li>
-                <li>Media Relations</li>
-                <li>Media Training</li>
-                <li>Social Media Acumen</li>
-                <li>Stakeholder Management</li>
-                <li>Talent Partnerships</li>
-                <li>Team Training & Mentoring</li>
-                <li>Tracking & Reporting</li>
-                <li>Vendor Management</li>
-                <li>Writing & Editing</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Notable Achievements</h2>
-            <ul>
-                <li>Revolutionized digital communication by leading the first press conference held entirely in the Metaverse for Meta’s "Pride Unbound" campaign, securing 20 VR-based partner interviews in top-tier consumer and business media outlets.</li>
-                <li>Conceptualized and spearheaded Pabst Blue Ribbon’s award-winning “In-Home Advertising” campaign, earning gold in AdAge’s Small Agency Media Campaign of the Year Award.</li>
-                <li>Developed and executed a dynamic communications strategy for the launch of Meta's "It’s Your World." campaign, successfully orchestrating 3 activations and achieving 663 total placements with a 100% message pull-through rate.</li>
-                <li>Generated viral buzz for Candace Parker’s inauguration as President of adidas Women’s Basketball by leveraging an extensive network of press relationships to secure the exclusive in Fast Company and earned a total of 12.9B+ impressions for the brand announcement.</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Professional Experience</h2>
-            
-            <h3>Corporate Communications & PR Manager</h3>
-            <p><strong>Pitchblend — San Francisco, California (Remote)</strong> <br>
-            <em>July 2021 – Present</em></p>
-            <ul>
-                <li>Enhance overall agency operations and growth alongside the COO, securing retainers with blue-chip accounts, including Meta, adidas Purpose, and Facebook Marketplace, while strengthening relationships with existing clients such as Facebook Communities, Air Company, adidas Originals, adidas Basketball, and adidas Outdoors.</li>
-                <li>Develop data-driven company-wide programming for adidas’ Purpose team to advance the brand’s vision and strategic priorities, supporting high-profile moments affecting adidas’ 57K+ global employee base.</li>
-                <li>Collaborate with internal cross-functional teams for clients across product, marketing, legal, privacy, and policy teams to ensure product stories are reported accurately, and manage external agencies across each brand campaign.</li>
-            </ul>
-
-            <h3>Communications & PR Lead, Brands & Events</h3>
-            <p><strong>INFAMOUS PR — Culver City, California</strong> <br>
-            <em>November 2016 – July 2021</em></p>
-            <ul>
-                <li>Conceptualized and led the execution of tailored client strategies for marquee accounts, including Pabst Blue Ribbon, Rockstar Games, X Games, and Coachella, while guiding a range of internal teams to best serve client needs.</li>
-                <li>Directed PR strategy for 25+ festivals each year, sparking 30% growth for the Events Division by identifying emerging business opportunities and effectively presenting proposals to prospective accounts.</li>
-                <li>Co-founded the agency’s content studio, Infamy Media, overseeing production, partnerships, and promotion for a rich array of live stream shows, series, and channels on Twitch.</li>
-            </ul>
-
-            <h3>Executive Assistant</h3>
-            <p><strong>Paradigm — Hollywood, California</strong> <br>
-            <em>January 2016 – October 2016</em></p>
-            <ul>
-                <li>Spearheaded key administrative tasks for two agents and a junior agent, handling a high volume of calls and emails, as well as coordinating daily calendars/schedules, travel arrangements, and expense reports.</li>
-                <li>Authored time-sensitive performance contracts, tracked payments, and examined settlement sheets for accurate calculations on an ongoing basis for 50+ artists, accounting for gross monthly income ranging from $500K to $2M+.</li>
-                <li>Maximized concert sales by facilitating artwork approval, reviewing social posts, planning meet-and-greets, and organizing giveaways in coordination with managers and promoters.</li>
-            </ul>
-
-            <h3>Sponsorship & Business Development Coordinator</h3>
-            <p><strong>Live Nation Entertainment — Beverly Hills, California</strong> <br>
-            <em>May 2014 – August 2015</em></p>
-            <ul>
-                <li>Streamlined brand sponsorship fulfillment by coordinating seamlessly with promoters for on-site branding and digital ad implementation, while developing compelling PowerPoint presentations to showcase sponsorship programs.</li>
-                <li>Acquired over 900 potential partnership leads through diligent research on prospects and adept interpersonal skills to cultivate relationships with emerging brands.</li>
-                <li>Expanded marketing reach for ‘Your Moment to Rock Contest’ on Live Nation's partnership account with Rock Revival, attracting 700+ contestants while overseeing all promotional initiatives.</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Education</h2>
-            <p><strong>Bachelor of Arts, Communication</strong> <br>
-            <strong>Minor, Business Administration</strong> <br>
-            <em>University of Southern California — Los Angeles, California</em> <br>
-            <em>Dean’s List, all semesters</em></p>
-        </div>
-
-        <div class="section">
-            <h2>Technical Skills</h2>
-            <ul>
-                <li>Adobe Photoshop</li>
-                <li>Brandwatch</li>
-                <li>Buffer</li>
-                <li>ChatGPT</li>
-                <li>Cision</li>
-                <li>ClickUp</li>
-                <li>Creator IQ</li>
-                <li>Google Workspace</li>
-                <li>Julius</li>
-                <li>Later</li>
-                <li>Launchmetrics</li>
-                <li>Mailchimp</li>
-                <li>Meltwater</li>
-                <li>Microsoft Office Suite</li>
-                <li>Muckrack</li>
-                <li>Notion</li>
-                <li>Salesforce</li>
-                <li>SimilarWeb</li>
-                <li>Slack</li>
-                <li>SQL</li>
-                <li>Sprout Social</li>
-                <li>Workday</li>
-                <li>Zoom</li>
-            </ul>
+       <div class="section">
+        <h1>Welcome to my professional hub!</h1>
+            <p>As a results-driven communications and public relations expert with over 8 years of experience, I’ve built my career on pushing boundaries—whether it’s setting new industry standards or trailblazing revolutionary activations. As an effective team leader, I cultivate workplace cultures where creativity and collaboration drive success. When I’m not training my team or spearheading game-changing campaigns, I’m fueling powerhouse brands like Meta, adidas, X Games, Pabst Blue Ribbon, and Rockstar Games with fresh, visionary ideas and opportunities that keep them ahead of the curve.
+            </p>
+            <p> Let’s <a href="mailto:devperales@gmail.com">connect</a> and see how we can make waves together!</p>
         </div>
     </div>
 </body>
