--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             <p>As a results-driven communications and public relations expert with over 8 years of experience, I’ve built my career on pushing boundaries—whether it’s setting new industry standards or trailblazing revolutionary activations. As an effective team leader, I cultivate workplace cultures where creativity and collaboration drive success. When I’m not training my team or spearheading game-changing campaigns, I’m fueling powerhouse brands like Meta, adidas, X Games, Pabst Blue Ribbon, and Rockstar Games with fresh, visionary ideas and opportunities that keep them ahead of the curve.
             </p>
             <p> Let’s <a href="mailto:devperales@gmail.com">connect</a> and see how we can make waves together!</p>
+
+           <div>
+            <p>Check out my </p><a href="/resume.html">resume</a></p>
+            <p>Send me a <a href="mailto:devperales@gmail.com">message!</a></p>
+           </div>
         </div>
     </div>
 </body>
