--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles/main.css">
     </head>
-    <body>
+    <body data-theme="dark">
         <div id="container--main">
 
             <section id="wrapper--hero" class="section--page">
@@ -17,17 +17,18 @@
                 <div>
                     <h1 id="user-name">Devin Perales</h1>
                     <p id="bio">Welcome to my professional hub! 
-                    <br/>
-                    As a results-driven communications and public relations expert with over 8 years of experience, I’ve built my career on pushing boundaries—whether it’s setting new industry standards or trailblazing revolutionary activations. As an effective team leader, I cultivate workplace cultures where creativity and collaboration drive success. When I’m not training my team or spearheading game-changing campaigns, I’m fueling powerhouse brands like Meta, adidas, X Games, Pabst Blue Ribbon, and Rockstar Games with fresh, visionary ideas and opportunities that keep them ahead of the curve.
-                    <br/>
-                    Let’s connect and see how we can make waves together!
+                        <div class="line-break"></div>
+
+                    <p>As a results-driven communications and public relations expert with over 8 years of experience, I’ve built my career on pushing boundaries—whether it’s setting new industry standards or trailblazing revolutionary activations. As an effective team leader, I cultivate workplace cultures where creativity and collaboration drive success. When I’m not training my team or spearheading game-changing campaigns, I’m fueling powerhouse brands like Meta, adidas, X Games, Pabst Blue Ribbon, and Rockstar Games with fresh, visionary ideas and opportunities that keep them ahead of the curve. </p>
+                    <div class="line-break"></div>
+                    
 </p>
-                    <p id="email">devperales@gmail.com</p>
                 </div>  
             </section>
 
             <section class="section--page">
-        
+                <p>Let’s connect and see how we can make waves together!</p>
+
                 <div id="socials--list">
                     <a href="https://www.linkedin.com/in/devin-perales-a5199769/" target="_blank">Linkedin</a>
                     <a href="./assets/resume.pdf" target="_blank">Download Resume</a>
@@ -36,7 +37,7 @@
 
             <section class="section--page">
                 <h2>Summary</h2>
-                <ul id="qualifications--list">
+                <ul>
                     <li>Results-Driven Communications Expert with 8+ years of direct experience</li>
                     <li>Influential PR Manager with proficiency in training, building dynamic teams, and cultivating an inclusive work culture that promotes collaboration and results</li>
                     <li>Media & Influencer Relations Wiz adept at securing coverage in B2B/trade and consumer outlets along with creator platforms, podcasts, and emerging media</li>
@@ -48,7 +49,7 @@
             <section class="section--page">
                 <h2>Achievements</h2>
                 <div id="wrapper--techstack__items">
-		    <ul id="qualifications--list">
+		    <ul>
 		        <li>Revolutionized digital communication by leading the first press conference held entirely in the Metaverse for Meta’s “Pride Unbound" campaign, securing 20 VR-based partner interviews in top-tier outlets</li>
                 <li>Spearheaded PR planning for Pabst Blue Ribbon’s award-winning “In-Home Advertising” campaign, earning gold in AdAge’s Small Agency Media Campaign of the Year Award</li>
 			    <li>Generated viral buzz for Candace Parker’s inauguration as President of adidas Women’s Basketball, securing the exclusive in Fast Company and earning a total of 17B+ impressions for the brand announcement by leveraging an extensive network of press relationships</li>
@@ -65,7 +66,7 @@
                     <p>July 2021 - present</p>
 		            <p>Pitchblend — San Francisco, California (Remote)</p>
                     <p><strong>Clients Include: </strong>Meta, adidas Originals, adidas Purpose, adidas Basketball, adidas Outdoors, adidas Skateboarding, Facebook Communities, Facebook Marketplace, Air Company, Aria Network, Route App</p>
-                    <ul id="qualifications--list">
+                    <ul>
                         <li>Orchestrate comprehensive marketing and public relations initiatives catering to a diverse clientele spanning Fortune 500 giants to fledgling startups, encompassing both B2B and B2C domains</li>
                         <li>Conceptualize, craft, and execute tailored communication strategies, leveraging innovative campaigns and providing robust support for product launches and business endeavors</li>
                         <li>Conduct in-depth market analysis to craft persuasive communication materials including press releases, award submissions, media alerts, bylines, blogs, website content, and social media messaging</li>
@@ -77,40 +78,35 @@
                     </ul>
                 </div>
 
-                <div class="line-break"></div>
-
                 <div class="card--work-history">
                     <strong>Senior Publicist, Brands & Events</strong>
                     <p>November 2016 – July 2021</p>
                     <p>INFAMOUS PR - Culver City, California</p>
                     <p><strong>Clients Include: </strong>Pabst Blue Ribbon, Rockstar Games, X Games, Smirnoff, Red Bull, Range Rover, Wu-Tang Clan, Coachella, Primavera Sound, HARD Events, CRSSD, Splash House, Do LaB, Rüfüs Du Sol</p>
-                    <ul id="qualifications--list">
+                    <ul>
                         <li>Managed a range of internal teams while directing all PR strategy for 25+ festivals each year, sparking 30% growth for the Events Division by identifying business opportunities and effectively presenting proposals to prospective accounts</li>
                         <li>Launched the agency’s Brand Division, securing marquee accounts such as Pabst Blue Ribbon, Rockstar Games, and Range Rover, while driving high-level communications planning and execution for brand clients</li>
                         <li>Co-founded the agency’s content studio, Infamy Media, overseeing production, partnerships, and promotion for a rich array of live stream shows, series, and channels on Twitch</li>
                     </ul>
                 </div>
 
-                <div class="line-break"></div>
-
                 <div class="card--work-history">
                     <strong>Executive Assistant</strong>
                     <p>January 2016 – October 2016</p>
                     <p>Paradigm — Hollywood, California, California</p>
-                    <ul id="qualifications--list">
+                    <ul>
                         <li>Spearheaded key administrative tasks for two agents and a junior agent, handling a high volume of calls and emails, as well as coordinating daily calendars/schedules, travel arrangements, and expense reports </li>
                         <li>Authored time-sensitive performance contracts, tracked payments, and examined settlement sheets for accurate calculations on an ongoing basis for 50+ artists, accounting for gross monthly income ranging from $500K to $2M+</li>
                         <li>Maximized concert sales by facilitating artwork approval, reviewing social posts, planning meet-and-greets, and organizing giveaways in coordination with managers and promoters</li>
                     </ul>
                 </div>
 
-                <div class="line-break"></div>
 
                 <div class="card--work-history">
                     <strong>Marketing Intern (Music & Touring)</strong>
                     <p>September 2015 – December 2015</p>
                     <p>Creative Artist Agency — Century City, California</p>
-                    <ul id="qualifications--list">
+                    <ul>
                         <li>Hand-selected for a highly competitive internship placement with CAA, leveraging advanced Excel skills to identify specific marketing needs for each client and designed marketing strategies that increased fan engagement </li>
                         <li>Empowered agents and senior leaders with actionable intelligence by compiling every record labels’ roster along with key data points to demonstrate trends and areas of opportunity</li>
                     </ul>
